--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,12 @@
 <% provide(:title, 'Home') %>
 
-<h1>SAMPLE TODO LIST</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+    <div class="center">
+      <%= link_to "Sign in", '#' %>
+      <div class="line"></div>
+      <%= link_to "Sign up", '#' %>
+    </div>
+
+    <div class="center hero-unit">
+      <h1>SAMPLE TODO LIST</h1>
+      <h3>Ruby Garage</h3>
+    </div>
