Add tasks with project_id and task_name

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,6 +20,30 @@
             <%= link_to "#{image_tag("delete_img.png", class: "delete-project")}".html_safe, project, method: :delete %>
           </div>
 
+          <%= form_for(:task, url: tasks_path, html: { class: "add-task"}) do |f| %>
+              <%= image_tag("Green.png", class: "plus-button")%>
+              <%= f.text_field :task_name, placeholder: "Enter the name of the task..." %>
+              <%= f.hidden_field :project_id , value: project.id%>
+              <%= f.submit "Add Task" %>
+          <% end %>
+
+          <ul id="project<%=project.id%>" class="task-list">
+            <% project.tasks.each do |task| %>
+                <li class="task" id="task_<%= task.id %>">
+                  <%= check_box_tag task.id, task.id, class: "task-check" %>
+
+                  <label for=<%=task.id %> ></label>
+                  <p><%= task.task_name %></p>
+
+                  <div class="control-task">
+                    <%= link_to "#{image_tag("task_edit_img.png", class: "edit-task")}".html_safe, edit_task_path(task) %>
+
+                    <%= link_to "#{image_tag("task_delete_img.png", class: "delete-task")}".html_safe, task, method: :delete %>
+                  </div>
+                </li>
+            <% end %>
+          </ul>
+
         </div>
     <% end %>
 
