Change tasks path

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,6 @@
+<% provide(:title, 'New Task') %>
 <h1>New Task</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Back', root_path %>
